fix textarea (#723)
* when textarea was prefilled some text from code, some weird scrollbar appeared to the textarea(or arrows) - so I fixed this weird behaviour

--- a/apps/admin-gui/src/styles.scss
+++ b/apps/admin-gui/src/styles.scss
@@ -726,6 +726,10 @@ button:focus {
   //display: table;
 }
 
+textarea.cdk-textarea-autosize-measuring {
+  padding: 4px 0 !important;
+}
+
 .base-item-color {
   background-color: mat-color($mat-blue-grey, 900);
 }
